# proveKV

./: .gitignore  CITATION.cff  CLAIMS.json  Cargo.toml  README.md  REPRODUCE.md  prove_audit.sh
fib-quant/: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  deny.toml
fib-quant/.github/workflows/: ci.yml  publish.yml
fib-quant/benches/: codebook_build.rs  encode_decode.rs  kv_attention_ref.rs  kv_encode_decode.rs
fib-quant/benchmarks/: ENCODE_BATCH_MICROBENCH_2026-06-01.md
fib-quant/docs/compression/: FIBQUANT_BENCHMARK_PLAN.md  FIBQUANT_FINAL_RELEASE_DECISION.md  FIBQUANT_MATH_CONFORMANCE.md  FIBQUANT_PUBLICATION_NONCLAIMS.md  FIBQUANT_PUBLISH_HARDENING_AUDIT.md  FIBQUANT_PUBLISH_READINESS_REPORT.md  FIBQUANT_SOURCE_BASIS.md
fib-quant/docs/kv/: CUDA_KERNEL_ROADMAP.md  HF_TRANSFORMERS_ADAPTER_PLAN.md  KV_FINAL_AUDITOR_HANDOFF.md  KV_PRODUCTION_READINESS_REPORT.md  KV_RUNTIME_ABI.md  KV_SOURCE_INVENTORY.md  KV_UNRESOLVED_RISKS.md  VLLM_FLASHINFER_ADAPTER_PLAN.md
fib-quant/examples/: build_codebook.rs  encode_batch_microbench.rs  encode_decode.rs  test_compact_decode.rs
fib-quant/scripts/: check_no_kv_product_claims.py  fibquant_final_assert.py  fibquant_static_source_audit.py  generate_kv_receipts.sh  generate_release_receipts.sh  install_fibquant_final_hardening_bundle.sh  install_publish_hardening_bundle.sh  kv_final_assert.py  kv_static_preflight.py  publish_final_assert.py  publish_preflight.py
fib-quant/src/: beta_inv.rs  bitpack.rs  codebook.rs  codec.rs  digest.rs  directions.rs  error.rs  lib.rs  lloyd.rs  metrics.rs  profile.rs  receipt.rs  rotation.rs  spherical_beta.rs
fib-quant/src/kv/: attention_ref.rs  block.rs  calibration.rs  codec.rs  layout.rs  mod.rs  page.rs  policy.rs  profile.rs  quality.rs  receipt.rs  shape.rs
fib-quant/tests/: bitpack_indices.rs  codebook_determinism.rs  compact_bytes_roundtrip.rs  corruption_rejection.rs  decode_batch_fast_parity.rs  direction_generators.rs  encode_decode_roundtrip.rs  kv_attention_quality.rs  kv_corruption_rejection.rs  kv_encode_decode_reference.rs  kv_policy_role_aware.rs  kv_property_shapes.rs  kv_shape_contracts.rs  lloyd_refinement.rs  norm_payload_rejection.rs  paper_k2_radius_closed_form.rs  paper_smoke_regression.rs  profile_digest.rs  profile_resource_bounds.rs  property_bitpack.rs  property_codec.rs  rotation_identity.rs  spherical_beta_sampler.rs
gpu-backend/: Cargo.toml  README.md
gpu-backend/examples/: codebook_lookup_microbench.rs  gpu_bench.rs
gpu-backend/kernels/: bitpack.cu  codebook_lookup.cu  hadamard.cu  lloyd_max.cu
gpu-backend/src/: cuda.rs  error.rs  fallback.rs  lib.rs  simd_nearest.rs
proveKV/: Cargo.toml  LICENSE  README.md
proveKV/.agents/skills/recursiveintell-final-audit/: SKILL.md
proveKV/.agents/skills/recursiveintell-phase-gate/: SKILL.md
proveKV/.agents/skills/recursiveintell-public-claim-boundary/: SKILL.md
proveKV/examples/: prove_kv_dynamic_cache_roundtrip.rs  prove_kv_fast_roundtrip.rs  prove_kv_gpu_bench.rs  prove_kv_multi_agent_shell.rs  prove_kv_shell_roundtrip.rs  prove_kv_turbo_only_bench.rs  prove_kv_turbo_only_shared.rs  provekv_test_compact_decode.rs
proveKV/schemas/: PackagePolicyV1.schema.json
proveKV/scripts/: assert_no_boundary_drift.py  assert_python_sidecar_layout.py  assert_realized_accounting.py  assert_receipt_integrity.py  assert_source_package_hygiene.py  assert_zpy_design_bundle.py  bench_boundary.py  bench_rust_synthetic.py  bootstrap_proveKV_workspace.sh  build_handoff_package.sh  build_multi_agent_corpus.py  build_prove_kv_corpus.py  check_forbidden_patterns.py  check_public_claims.py  compare_receipts.py  compute_system_ratio.py  ppl_multi_agent.py  ppl_smoke.py  ppl_validate.py  ppl_validate_multi_agent.py  ppl_validate_shell.py  preflight.sh  preflight_next_pass.sh  run_next_validation.sh  run_rust_gates.sh  test_zpy_hygiene_regression.py  test_zpy_universal_packager_regression.py  validate_final_state.py  validate_schemas.py
proveKV/src/: codec.rs  error.rs  fallback.rs  lib.rs  manifest.rs  policy.rs  pool.rs  receipt.rs  shape.rs  shell.rs
proveKV/tests/: batched_wire_receipt.rs
quant-codec-core/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
quant-codec-core/src/: codec.rs  digest.rs  dtype.rs  error.rs  eval.rs  ids.rs  lib.rs  shape.rs
quant-codec-core/tests/: digest_stability.rs  serde_roundtrip.rs  shape_validation.rs
turbo-quant/: .gitignore  AGENTS.release.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md
turbo-quant/.github/workflows/: turbo-quant-release-gate.yml
turbo-quant/benches/: turbo_quant_search.rs
turbo-quant/codex/: TURBO_QUANT_0_2_RELEASE_PROMPT.md
turbo-quant/docs/: API_TARGET.md  BENCHMARKING.md  COMPATIBILITY.md  COMPATIBILITY_MATRIX.md  EXPECTED_FILE_TREE.md  FIB_QUANT_INTEROP.md  FIB_QUANT_INTEROP_PLAN.md  RELEASE_GATE.md  RESEARCH_SOURCE_MAP.md  RISK_REGISTER.md  ROLLBACK_AND_QUARANTINE.md  SEMANTIC_MEMORY_GLOSS_PLAN.md  STORAGE_WIRE_FORMAT.md  TEST_MATRIX.md
turbo-quant/docs/release/: CRATES_IO_0_2_0_RUNBOOK.md  README_QUALITY_STANDARD.md  RELEASE_RECEIPT_SCHEMA.json
turbo-quant/examples/: bench_embeddings.rs  compat_0_1_smoke.rs  decode_wallclock.rs  kv_shadow.rs  profile_receipt.rs
turbo-quant/scripts/: check_cratesio_package_scope.py  generate_benchmark_receipt_schema.py  inspect_fib_quant_sibling.py  scan_forbidden_claims.py  semantic_memory_inventory.py  tq_package_scope_gate.py  tq_publish_crates_io.py  tq_readme_gate.py  tq_release_gate.py
turbo-quant/src/: baseline.rs  bitpack.rs  codebook.rs  error.rs  eval.rs  index.rs  kv.rs  lib.rs  packed.rs  polar.rs  profile.rs  qjl.rs  radius.rs  rotation.rs  turbo.rs  wire.rs
turbo-quant/tests/: api_compat.rs  bitpack.rs  determinism.rs  encoded_size.rs  inner_product.rs  invalid_inputs.rs  kv_policy.rs  malformed_artifacts.rs  packed_index.rs  profile_receipt.rs  query_workspace.rs  readiness.rs  rotation_policy.rs  serialization.rs  wire_format.rs  workspace.rs
turbo-quant/tools/semantic_memory_harness/: Cargo.toml  Cargo.toml.template  README.md
(+94 files in other folders)
