[package]
name = "fib-quant"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.75"
description = "Experimental Rust implementation of the FibQuant radial-angular vector quantization core"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/RecursiveIntell/Libraries"
homepage = "https://github.com/RecursiveIntell/Libraries"
documentation = "https://docs.rs/fib-quant"
keywords = ["quantization", "vector", "kv-cache", "llm", "compression"]
categories = ["compression", "science", "algorithms"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CITATION.cff",
    "CHANGELOG.md",
    "RELEASE_CHECKLIST.md",
    "src/**",
    "tests/**",
    "benches/**",
    "deny.toml",
    "examples/**",
    "docs/compression/**",
    "docs/kv/**",
]

[features]
default = ["parallel"]
kv = []
gpu = ["gpu-backend/gpu"]
# The Rayon-parallel finish_batch_encode path. ON by default — the
# per-batch dispatch overhead is negligible and the multi-core win
# dominates on 4+ core machines. Disable to pin to a single thread
# (e.g., for embedded use).
parallel = ["rayon"]
# Enables the GPU codebook_lookup path inside encode_batch. Off by default
# because the per-call H2D/D2H overhead is currently higher than the tight
# CPU loop for the (n, d) sizes we benchmark. Will be re-enabled once a
# device-side pipeline keeps the rotated data resident on GPU.
gpu_codebook_lookup = []

[dependencies]
blake3 = "1.8.3"
half = "2"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
statrs = "0.17"
thiserror = "2.0.18"
gpu-backend = { version = "0.1.0-alpha.1", path = "../gpu-backend" }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1"
rand = "0.8"
rand_chacha = "0.3"

[[bench]]
name = "encode_decode"
harness = false

[[bench]]
name = "codebook_build"
harness = false

[[bench]]
name = "kv_encode_decode"
harness = false
required-features = ["kv"]

[[bench]]
name = "kv_attention_ref"
harness = false
required-features = ["kv"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "forbid"
