[package]
name = "provekv"
version = "0.1.0-alpha.3"
edition = "2021"
rust-version = "1.75"
description = "proveKV — two-tier, receipted, content-addressed KV-cache pool. fib_k4_n32 cold tier + turbo_8bit hot tier. The pool is the system; the codecs are the primitives."
license = "MIT"
repository = "https://github.com/RecursiveIntill/proveKV"
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "src/**",
    "examples/**",
    "tests/**",
    "benches/**",
    "docs/**",
]

[lib]
name = "provekv"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "2"

fib-quant = { version = "0.1.0-alpha.3", optional = true }
turbo-quant = { version = "0.2.2", optional = true }
rayon = "1.10"

[features]
# Default: fib cold tier + turbo hot tier. Both tiers compiled. The compact
# binary wire format is used for both (fib's "FB1" magic and turbo's "TQW1"
# magic). See proveKV/src/codec.rs for the encode/decode paths.
default = ["fib", "turbo", "parallel_pool", "parallel_shell"]
fib = ["fib-quant"]
turbo = ["turbo-quant"]
# Parallelize the per-layer shell build loop. Default ON; turn off
# only for single-threaded benchmarking or to compare against the
# serial baseline.
parallel_pool = ["fib-quant?/parallel"]
parallel_shell = []

[dev-dependencies]
proptest = "1"
