[package]
name = "quant-codec-core"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
description = "Shared codec/profile/shape/eval traits and typed IDs for governed compression experiments"
authors = ["sikmindz"]
readme = "README.md"
repository = "https://github.com/RecursiveIntell/Libraries"
homepage = "https://github.com/RecursiveIntell/Libraries/tree/main/crates/quant-codec-core"
documentation = "https://docs.rs/quant-codec-core"
keywords = ["codec", "profile", "traits", "shape", "ids", "quantization"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"
blake3 = "1"

[dev-dependencies]
serde_json = "1"
proptest = "1"

[features]
default = ["serde"]
serde = ["dep:serde"]
