[package]
name = "turbo-quant"
version = "0.2.2"
edition = "2021"
rust-version = "1.75.0"
description = "Experimental vector compression sidecars with PolarQuant, TurboQuant, QJL sketches, wire formats, and benchmark receipts"
license = "MIT OR Apache-2.0"
authors = ["sikmindz"]
readme = "README.md"
repository = "https://github.com/RecursiveIntell/turbo-quant"
homepage = "https://github.com/RecursiveIntell/turbo-quant"
documentation = "https://docs.rs/turbo-quant"
keywords = ['quantization', 'vector-search', 'compression', 'embeddings', 'sidecar']
categories = ["science", "algorithms", "compression", "mathematics", "database"]
exclude = [
    ".codex/",
    ".github/",
    ".gitignore",
    "0*_*.md",
    "0*_*.sh",
    "0*_*.json",
    "AGENTS.md",
    "AGENTS.release.md",
    "OPERATOR_CHECKLIST.md",
    "P26_EXECUTION_BUNDLE.md",
    "codex/",
    "prompts/",
    "docs/codex-runs/",
    "docs/release-evidence/",
    "docs/P26_*.md",
    "docs/UPLOADED_PACKAGE_SOURCE_FACTS.json",
    "governor/",
    "install_into_repo.sh",
    "p33boot/",
    "schemas/",
    "scripts/",
    "templates/",
    "tools/semantic_memory_harness/",
    "target/",
    "*.zip",
    "*.codex-archive.json",
    "*.manifest.json",
    "*.findings.json",
    "*.excluded.json",
    "*.report.md",
    "z.py",
]

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
schemars = "0.8"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
nalgebra = { version = "0.33", features = ["serde-serialize"] }

[features]
default = []

[dev-dependencies]
criterion = "0.5"
serde_json = "1"

[[bench]]
name = "turbo_quant_search"
harness = false
