[package]
name = "turbo-quant-semantic-memory-harness"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
turbo-quant = { path = "../.." }
semantic-memory = { path = "../../../semantic-memory", default-features = false, features = ["brute-force"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
